manifests/ovms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: ovms
  labels:
    app: ovms
  name: ovms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovms
  strategy: {}
  template:
    metadata:
      annotations:
        app: ovms
      labels:
        app: ovms
        version: v1
    spec:
      containers:
      - command:
        - "/ovms/bin/ovms"
        args:
        - "--model_name"
        - demo
        - "--model_path"
        - s3://models/demo
        - "--port"
        - "9000"
        - "--shape"
        - auto
        image: registry.connect.redhat.com/intel/openvino-model-server:latest
        name: ovms-container
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9091
          protocol: TCP
      restartPolicy: Always
