manifests/ovms/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ovms
  labels:
    app: ovms
spec:
  type: NodePort
  ports:
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 32290
    - name: 9090-tcp
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 32299
  selector:
    app: ovms
