manifests/ovms/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ovms
  labels:
    app: ovms
spec:
  to:
    kind: Service
    name: ovms
    weight: 100
  port:
    targetPort: 9000-tcp
  wildcardPolicy: None
